# autonomous-stock-researcher

./: .gitignore  PARALLEL_BUILD.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: costs.yaml  universe.yaml  validation.yaml
docs/: llm_generator_brief.md  tier2_scoping_brief.md  wrds_download_checklist.md
notebooks/: 01_anomaly_reproduction.ipynb
protocol/: validation_protocol.md
scripts/: 01_ingest_raw.py  02_build_panels.py  03_reproduce.py  04_build_benchmarks.py  05_validate.py  06_generate_and_screen.py  07_ingest_text.py  07_run_chunked.py  08_extract_features.py  09_ablation.py
scripts/diagnostics/: README.md  momentum_decile_spread.py  sue_decile_spread.py  sue_latency_sweep.py  sue_longshort_net.py  weekend_effect.py
src/backtest/: __init__.py  costs.py  execution.py  harness.py  labels.py
src/baselines/: __init__.py  baselines.py
src/data/: __init__.py  edgar.py  interface.py  synthetic.py  text_feature_provider.py  text_store.py  wrds_provider.py
tests/: test_ablation.py  test_backtest_execution.py  test_baselines.py  test_compiler_contract.py  test_costs.py  test_edge_library.py  test_extract_schema.py  test_extractor.py  test_generator.py  test_generator_tier2.py  test_harness_benchmark_relative.py  test_harness_config.py  test_harness_cross_sectional.py  test_harness_no_lookahead.py  test_harness_recovers_injected_effect.py  test_llm_generator.py  test_spec_validator.py  test_synthetic_data.py  test_text_feature_provider.py  test_text_store.py  test_trial_ledger.py  test_universe_compiler.py  test_validation.py
(+20 files in other folders)
