[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equity-research-engine"
version = "0.1.0"
description = "AI equity research and backtesting engine: propose edges with an LLM, confirm them with deterministic point-in-time backtests."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Research proof of concept" }
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=15",
    "scipy>=1.11",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
